RESOLVED FIXED34352
Timeout for client-based Geolocation shouldn't start until user gives consent
https://bugs.webkit.org/show_bug.cgi?id=34352
Summary Timeout for client-based Geolocation shouldn't start until user gives consent
Steve Falkenburg
Reported 2010-01-29 15:49:54 PST
Timeout for client-based Geolocation shouldn't start until user gives consent
Attachments
Patch (2.03 KB, patch)
2010-01-29 15:51 PST, Steve Falkenburg
darin: review+
Steve Falkenburg
Comment 1 2010-01-29 15:51:25 PST
Steve Falkenburg
Comment 2 2010-01-29 19:04:35 PST
Note You need to log in before you can comment on or make changes to this bug.