2010-01-29  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Darin Adler.

        Timeout for client-based Geolocation shouldn't start until user gives consent
        https://bugs.webkit.org/show_bug.cgi?id=34352

        * page/Geolocation.cpp:
        (WebCore::Geolocation::startRequest): Don't start timer if we're blocked on user consent.
        (WebCore::Geolocation::setIsAllowed): Start timer after user gives consent.


Canonical link: https://commits.webkit.org/45462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54096 268f45cc-cd09-0410-ab3c-d52691b4dbfc